# misi-bayang-gabungan

./: .gitignore  AGENTS.md
backend/: .env.example  logging_setup.py  pyproject.toml  run.py
backend/agent/: __init__.py  callbacks.py  interfaces.py  live_client.py  mission_log.py  mock_client.py  orchestrator.py  planner.py  prompts.py  real_mcp_client.py
backend/api/: main.py  state.py
backend/api/routes/: config.py  mission.py
backend/api/websocket/: events.py  manager.py  observer.py
backend/blackbox_test/: README.md  streamlit.py
backend/config/: settings.py
backend/mcp_server/: context.py  server.py
backend/mcp_server/tools/: battery.py  discovery.py  movement.py  sensors.py
backend/simulation/: README.md  __init__.py  drone_agent.py  obstacle.py  survivor.py  world.py
backend/tests/: test_agent.py  test_integration.py  test_mcp_tools.py  test_simulation.py  test_simulation_tool.py
docs/: api-spec.yaml  mcp-spec.json
frontend/: dev.ts  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  ContextPanel.tsx  DronePanel.tsx  LogPanel.tsx  SimulationCanvas.tsx  logger.ts  main.tsx  store.tsx  types.ts  useWebSocket.ts
