[project]
name = "backend"
version = "0.1.0"
description = "MISI BAYANG — Decentralised Swarm Rescue Intelligence System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "mesa[rec]>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
